--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 <left><h1>Миронов Артемий</h1></left>
 <left><img alt="Это я" width="15%" src="https://pp.userapi.com/c631930/v631930784/29336/6Md94I-6y7U.jpg"></left>
 <br/>
-<p>Студент первого курса ОП История НИУ ВШЩЭ.С детства за Шруссбери Таун.
+<p>Студент первого курса ОП История НИУ ВШЭ.С детства за Шруссбери Таун.
 </p>
 <h2>Контакты:</h2>
-Страничка <a href=https://vk.com/gamekonsolertim/>vkontakte</a>
+Страничка <a href="https://vk.com/gamekonsolertim"/>Vkontakte</a>
 <br/>
-<a href=https://github.com/artemiymironov>GitHub</a>
+<a href="https://github.com/artemiymironov">GitHub</a>
 <br/>
 Телефон: <b>+79104370736</b>
 <br/>
