--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>Моя личная страничка</title>
 </head>
-<body>
+<body> bgcolor="#FFFACD">
 <left><h1>Миронов Артемий</h1></left>
 <left><img alt="Это я" width="15%" src="https://pp.userapi.com/c631930/v631930784/29336/6Md94I-6y7U.jpg"></left>
 <br/>
@@ -18,5 +18,6 @@
 Телефон: <b>+79104370736</b>
 <br/>
 E-mail: <i>ayumironov@edu.hse.ru</i>
+   <p style="color:PURPLE">Спасибо за просмотр! :)</p>
 </body>
 </html>
